--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,12 +17,9 @@
         </nav>       
     </header>
     <main>
-    <div class="container">
-        <img src="assets/imagens/Theatro-baixa-008.jpg" alt="Estátua apontando para o céu" style="width:100%;">
-            <div class="text-block">
-                <h1>PORTFÓLIO</h1>
-            </div>
-    </div>
+    <section class="background-main"> 
+    <h1>PORTFÓLIO</h1>
+    </section>
     </main>
     <footer>
         <div class="sobreMim">
